fix(theme): :bug: Fix alignment of the social media links

--- a/source/css/_partial/index.styl
+++ b/source/css/_partial/index.styl
@@ -1,3 +1,7 @@
+#socials
+  text-align: center;
+  align-content: center;
+
 .post-list
   padding: 0
 
